--- a/src/main/resources/templates/SnippetShare.html
+++ b/src/main/resources/templates/SnippetShare.html
@@ -102,7 +102,7 @@ body {
 <h2 style="color:white;margin-top:10%;"><center><strong>CREATE AND SHARE SNIPPETS</strong></center></h2><br/><br/><br/>
 
 <div class="col-md-3" style="margin-left:38%;">
-<button type="submit" class="btn btn-block btn-primary" id="new" style="background-color:#ff5a5f;border-color:#ff5a5f;font-weight:bold;">Login / Sign up to know about it</button>
+<button type="submit" class="btn btn-block btn-primary" data-toggle="modal" data-target="#myModal" id="new" style="background-color:#ff5a5f;border-color:#ff5a5f;font-weight:bold;">Login / Sign up to know about it</button>
 </div>
 
 <div class="container" style="color:white;margin-top:8%;">
