Share Snippet update

--- a/src/main/resources/templates/ViewSnippets.html
+++ b/src/main/resources/templates/ViewSnippets.html
@@ -93,8 +93,8 @@
 							id="ownerId" th:value="${userId}" /> <input type="submit" />
 					</form>
 
-					<form action="@{/addUsersToBoard/__${boardId}__/__${userId}__}"
-						method="post">
+					<form th:action="@{/addUsersToBoard/__${boardId}__/__${userId}__}"
+						method="post" role="form">
 						<div class="form-group">
 							<label>Share Snippets with: </label>
 						</div>
