--- a/src/main/resources/templates/GetAllBoards.html
+++ b/src/main/resources/templates/GetAllBoards.html
@@ -34,11 +34,10 @@
 
 <div class="container" style="background-color:#f5f5f5;">
     <h2><strong>All Boards</strong></h2>
-    <hr/>
-    <br/>
+    <hr style="border-top:1px solid darkgrey"/>
 
     <div class="row">
-        <h3>Java Boards</h3>
+        <h4 style="margin-left:1%;"><strong>Java :</strong></h4>
         <p th:each="entry: ${javaBoards}">
 
         <div class="col-md-2"
@@ -58,7 +57,7 @@
 
     </div>
     <div class="row">
-        <h3>Scala Boards</h3>
+        <h4 style="margin-left:1%;"><strong>Scala :</strong></h4>
         <p th:each="entry: ${scalaBoards}">
 
         <div class="col-md-2"
@@ -78,7 +77,7 @@
 
     </div>
     <div class="row">
-        <h3>C/C++ Boards</h3>
+        <h4 style="margin-left:1%;"><strong>C/C++ :</strong></h4>
         <p th:each="entry: ${ccppBoards}">
 
         <div class="col-md-2"
@@ -98,7 +97,7 @@
 
     </div>
     <div class="row">
-        <h3>HTML/JavaScript Boards</h3>
+        <h4 style="margin-left:1%;"><strong>HTML/JavaScript :</strong></h4>
         <p th:each="entry: ${htmlBoards}">
 
         <div class="col-md-2"
@@ -118,7 +117,7 @@
 
     </div>
     <div class="row">
-        <h3>Perl/Python/PHP Boards</h3>
+        <h4 style="margin-left:1%;"><strong>Perl/Python/PHP :</strong></h4>
         <p th:each="entry: ${pppBoards}">
 
         <div class="col-md-2"
